--- a/package.json
+++ b/package.json
@@ -4,17 +4,25 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "build:ios:dev": "eas build --profile=development --platform=ios",
+    "build:android:dev": "eas build --profile=development --platform=android",
+    "prebuild:ios": "npx expo prebuild --platform ios --clean",
+    "prebuild:android": "npx expo prebuild --platform android --clean"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.37",
     "expo-constants": "~17.0.7",
+    "expo-dev-client": "~5.0.12",
+    "expo-file-system": "~18.0.11",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
