Update app name, enhance layout, and implement quick actions for plant management

--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "lint": "eslint .",
     "build:ios:dev": "eas build --profile=development --platform=ios",
     "build:android:dev": "eas build --profile=development --platform=android",
+    "build:android:preview": "eas build -p android --profile preview",
+    "prebuild": "npx expo prebuild --clean",
     "prebuild:ios": "npx expo prebuild --platform ios --clean",
     "prebuild:android": "npx expo prebuild --platform android --clean"
   },
   "dependencies": {
+    "@expo-google-fonts/caveat": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "date-fns": "^4.1.0",
@@ -21,12 +24,15 @@
     "expo-constants": "~17.0.7",
     "expo-dev-client": "~5.0.12",
     "expo-file-system": "~18.0.11",
+    "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
+    "expo-quick-actions": "^4.0.2",
     "expo-router": "~4.0.17",
     "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "^4.0.8",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
